# online-store

./: .gitattributes  CMakeLists.txt  README.md
src/: app.cpp  cart_manager.cpp  db.cpp  dbb.cpp  main.cpp  order_manager.cpp  product_manager.cpp  user_manager.cpp  wishlist_manager.cpp
src/controllers/: auth_controller.cpp  cart_controller.cpp  cookie_utils.cpp  order_controller.cpp  page_controller.cpp  product_controller.cpp  wishlist_controller.cpp
src/include/: app.hpp  cart_manager.hpp  db.hpp  dbb.hpp  order_manager.hpp  product_manager.hpp  user_manager.hpp  wishlist_manager.hpp
src/include/controllers/: auth_controller.hpp  cart_controller.hpp  cookie_utils.hpp  order_controller.hpp  page_controller.hpp  product_controller.hpp  wishlist_controller.hpp
static/css/: basket-style.css  card-style.css  card.css  catalog-style.css  drop-panel.css  favourite-style.css  footer.css  header.css  main-style.css  modal.css  order-style.css  politika.css
static/js/: basket.js  card.js  catalog.js  favorite.js  global.js  header.js  main.js  order.js  review.js  some-card.js  toast.js  user_orders.js
templates/: basket.html  card.html  catalog.html  drop-panel.html  favourite.html  main.html  order.html  politika.html  swap.html  user_orders.html
templates/includes/: card.html  footer.html  header.html  modal.html  reset_password.html  review.html  toaster.html
tests/: test_cart_manager.cpp  test_dbb.cpp  test_order_manager.cpp  test_product_manager.cpp  test_user_manager.cpp  test_wishlist_manager.cpp
